welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {
                           ^Program:6: error: not found: value vuBiscuit
vuBiscuit();
^